# rs_bench

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust.yml
benches/: bench_main.rs
benches/benchmarks/: binarize.rs  binary_ip.rs  f32_cmp.rs  hash.rs  linear.rs  minmax.rs  mod.rs  norm.rs  projection.rs  quantize.rs
cpp/: bench  main.cpp  quantize.cpp
src/: align.rs  binarize.rs  binary_ip.rs  float32.rs  hash.rs  l2.rs  lib.rs  linear.rs  minmax.rs  norm.rs  ord32.rs  projection.rs  quantize.rs
