[package]
name = "rs_bench"
version = "0.1.0"
edition = "2021"

[profile.opt]
inherits = "release"
opt-level = 3
lto = true

[dependencies]
bytemuck = "1.17.0"
num-traits = "0.2.19"
popcnt = "0.1.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
rand = "0.8"

[workspace]
resolver = "2"

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false
